# lnd-example-bot

./: .gitignore  Cargo.toml  README.md
configuration/: base.yaml  local.yaml  production.yaml
src/: bot.rs  configuration.rs  lib.rs  main.rs  startup.rs
src/lnd/: lnd_manager.rs  mod.rs
src/lnd/domain/: chain_data.rs  feature.rs  ln_get_info.rs  mod.rs
