[package]
name = "lighting-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0.40"
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"
thiserror = "1.0.24"
signal-hook = "0.3.15"
futures-util = "0.3.26"
crossbeam-channel = "0.5.7"
async-trait = "0.1.66"
serde-aux = "4.1.2"
tokio = { version = "1.25", features = ["full"] }
serde = "1.0.115"
config = { version = "0.13", default-features = false, features = ["yaml"] }
serde_json = { version = "1.0.61", features = ["raw_value"] }
secrecy = { version = "0.8", features = ["serde"] }
chrono = "0.4.24"